# gidence-scm

./: .gitignore  CLAUDE.md  PLAN.md
annotator/: README.md  annotate.py  config copy.json  config.json  deploy.ipynb  notebook.ipynb  test.py  train.ipynb  train_model_zoo.ipynb  trained.ipynb
ios/scm/: App.swift  Info.plist
ios/scm.xcodeproj/: project.pbxproj
ios/scm.xcodeproj/xcshareddata/xcschemes/: scm.xcscheme
ios/scm/Managers/: ClusterManager.swift  EvidenceManager.swift  NotificationManager.swift  ProcessorManager.swift  UserManager.swift
ios/scm/Models/: Camera.swift  Cluster.swift  Processor.swift
ios/scm/Styles/: Inputs.swift
ios/scm/Utils/: Cache.swift  Network.swift
ios/scm/Views/: ContentView.swift
ios/scm/Views/Components/: ButtonNavigation.swift  CameraCard.swift  ClusterCard.swift  ClusterEvidenceCard.swift  HCard.swift  InputSelect.swift  InputTextSelect.swift  ProcessorCard.swift  SCMImage.swift  TabBar.swift  TextBodyThree.swift  TextHeadlineFour.swift  TextHeadlineSix.swift  TextHeadlineTwo.swift
ios/scmUITests/: scmUITests.swift
processor/: .gitignore  Cargo.toml  DEPLOY.md  MANIFEST.in  README.md  build-deploy.sh  camera.json  config.json  config.yaml  install.sh  pyproject.toml  setup.sh  test_minimal.py
processor-web/: CLAUDE.md  UI-COMPONENTS.md  nuxt.config.ts  package.json  service  start.sh
processor-web/app/assets/styles/: global.scss
processor-web/app/components/: gd-alert.vue  gd-badge.vue  gd-button.vue  gd-camera-delete-menu.vue  gd-camera-evidence.vue  gd-camera-information-menu.vue  gd-camera-menu.vue  gd-camera.vue  gd-card.vue  gd-evidence-information-menu.vue  gd-evidence-menu.vue  gd-evidence.vue  gd-input-checkbox.vue  gd-input-date.vue  gd-input-radio.vue  gd-input-select.vue  gd-input-switch.vue  gd-input-text-select.vue  gd-input-text.vue  gd-input-textarea.vue  gd-input-toggle.vue  gd-loader.vue  gd-menu.vue  gd-menus.vue  gd-modal.vue  gd-popover.vue  gd-processor-information-menu.vue  gd-processor-menu.vue  gd-progress.vue  gd-spinner.vue  gd-svg.vue  gd-tab-panel.vue  gd-table.vue  gd-tabs.vue  gd-violation.vue  gd-webhook-menu.vue
processor-web/app/composables/: use-alert.ts  use-camera.ts  use-device.ts  use-evidence.ts  use-main.ts  use-processor.ts  use-reader.ts  use-svg.ts
processor-web/app/layouts/: default.vue
processor-web/app/pages/: index.vue
processor-web/app/plugins/: fetch.ts
processor-web/app/types/: camera.ts  evidence.ts  general.ts  processor.ts
processor-web/public/: theme.js
processor/inference/: association.py  detection_simple.py  detection_simple_pipeline.py  main.py  pipeline.py  scm_pipeline_v1.py  udp.py  uds.py
processor/inference/core/common/: buffer_utils.py  core.py  defines.py  hailo_logger.py  parser.py
processor/inference/core/gstreamer/: gstreamer_app.py  gstreamer_common.py  gstreamer_helper_pipelines.py
processor/setup/installation/: __init__.py  compile_cpp.py  download_resources.py  post_install.py  set_env.py
processor/simulator/: README.md  __init__.py  main.py
processor/simulator/images/: .gitkeep
processor/src/: main.rs
processor/src/models/: camera.rs  evidence.rs  mod.rs  processor.rs
processor/src/routes/: camera.rs  mod.rs  processor.rs
server/: Cargo.toml
server-ios/: README.md
server-ios/scm/: App.swift
server-ios/scm/Managers/: ClusterManager.swift  EvidenceManager.swift  NotificationManager.swift  ProcessorManager.swift  UserManager.swift  ViewManager.swift
server-ios/scm/Models/: Evidence.swift  User.swift
server-ios/scm/Styles/: Buttons.swift  Cards.swift
server-ios/scm/Utils/: Network.swift
server-ios/scm/Views/: ContentView.swift
server-ios/scm/Views/Components/: ButtonIcon.swift  ButtonRegular.swift  EvidenceCard.swift  InputText.swift  InputToggle.swift  PageWrapper.swift  TextBodyFive.swift  TextBodyFour.swift  TextTitle.swift  (+9 more)
server-ios/scmTests/: scmTests.swift
server-ios/scmUITests/: scmUITestsLaunchTests.swift
server/keys/: apns.p8  private_access.key  private_refresh.key  public_access.pem  public_refresh.pem
server/src/: central.rs  database.rs  helper.rs  main.rs
server/src/models/: camera.rs  cluster.rs  event.rs  evidence.rs  mod.rs  processor.rs  subscriber.rs  uniform.rs  user.rs
server/src/routes/: camera.rs  cluster.rs  evidence.rs  mod.rs  processor.rs  subscriber.rs  uniform.rs  user.rs  violation.rs
server/src/views/: camera.rs  cluster.rs  evidence.rs  mod.rs  processor.rs  user.rs
(+58 files in other folders)
