[package]
name = "processor"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.13.2", features = ["v4"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rand = "0.8.5"
chrono = "0.4.38"
get_if_addrs = "0.5.3"
reqwest = "0.12.24"

[profile.release]
strip = true        # Strip symbols for smaller binary
lto = true         # Link-time optimization
codegen-units = 1  # Better optimization (slower compile, faster runtime)
opt-level = 3      # Maximum optimization