[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gidence-scm-processor"
version = "1.0.0"
description = "Hailo AI detection_simple application"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Hailo Minimal"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core dependencies for detection_simple
    "numpy",
    "setproctitle",
    "opencv-python",
    "python-dotenv",
    "pyyaml",
    "Pillow",
    # Dependencies from GStreamer integration
    "loguru",
]

[project.optional-dependencies]
# Development tools - install with: pip install -e ".[dev]"
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
detect-simple = "inference.detection_simple:main"

[tool.setuptools.packages.find]
include = ["inference*"]

[tool.setuptools.package-data]
"inference.config" = [
    "*.yaml",
]
