[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gidence-scm-processor"
version = "1.0.0"
description = "Optense — Safety Compliance Monitoring"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Optense"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "setproctitle",
    "opencv-python",
    "python-dotenv",
    "pyyaml",
    "Pillow",
    # Dependencies from GStreamer integration
    "loguru",
]

[project.optional-dependencies]
# Development tools - install with: pip install -e ".[dev]"
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
# Original detection simple pipeline
run = "inference.main:main"

# SCM Phase Development Scripts
scm-phase1 = "inference.scm_pipeline_v1:main"
scm-phase2 = "inference.scm_pipeline_v2:main"
scm-phase3 = "inference.scm_pipeline_final:main"
scm-multicam = "inference.multi_camera_manager:main"

# Convenient aliases
scm-pose = "inference.scm_pipeline_v1:main"
scm-dual = "inference.scm_pipeline_v2:main" 
scm-full = "inference.scm_pipeline_final:main"

[tool.setuptools.packages.find]
include = ["inference*"]

[tool.setuptools.package-data]
"inference.config" = [
    "*.yaml",
]
