[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gidence-scm"
version = "1.0.0"
description = "Optense — Safety Compliance Monitoring"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Optense"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "setproctitle",
    "opencv-python",
    "python-dotenv",
    "pyyaml",
    "Pillow",
    # Dependencies from GStreamer integration
    "loguru",
]

[project.optional-dependencies]
# Development tools - install with: pip install -e ".[dev]"
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
run = "inference.main:main"
simulate = "simlator.main:main"

[tool.setuptools.packages.find]
include = ["inference*"]

[tool.setuptools.package-data]
"inference.config" = [
    "*.yaml",
]
