[package]
name = "gidence-scm"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.13.2", features = ["v4"] }
tokio = { version = "1.40.0", features = ["full"] }
mongodb = "2.8.2"
serde = "1.0.202"
actix = "0.13.0"
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-web = "4.0.0"
actix-web-actors = "4.2.0"
futures = "0.3.28"
serde_json = "1.0.117"
chrono = "0.4.38"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
jsonwebtoken = "8.3.0"
pwhash = "1.0.0"
a2 = "0.10.0"
